# camera_detector

./: CMakeLists.txt  package.xml
include/camera_detector/: .config.h.swn  .config.h.swo  .config.h.swp  config.h  detection_processing.h  detection_processing_sim.h  kinectDetector.h  rosbagSimulation.h
include/ed_gui_server/: Area.h  Color.h  EntityInfo.h  EntityInfos.h  EntityMeshAndAreas.h  GetEntityInfo.h  GetEntityInfoRequest.h  GetEntityInfoResponse.h  Interact.h  InteractRequest.h  InteractResponse.h  Mesh.h  Polygon.h  QueryEntities.h  QueryEntitiesRequest.h  QueryEntitiesResponse.h  QueryMeshes.h  QueryMeshesRequest.h  QueryMeshesResponse.h  circleProperties.h  objPosVel.h  objsPosVel.h  rectangleProperties.h
msg/: detections.msg
src/: biPartite_mincost.cpp  detection_processing.cpp  detection_processing_sim.cpp  kinectDetector.cpp  math_functions.cpp  rosbagSimulation.cpp
src (copy)/: detection_processing.cpp  hypothesize2.cpp  kinectDetector.cpp  rosbagSimulation.cpp
